Fix start date label overlap.

--- a/src/renderer/src/components/CollectionForm/CollectionForm.module.css
+++ b/src/renderer/src/components/CollectionForm/CollectionForm.module.css
@@ -81,7 +81,7 @@
   width: fit-content;
 }
 
-/* input[type="date"]::-webkit-datetime-edit-fields-wrapper {
+input[type="date"]::-webkit-datetime-edit-fields-wrapper {
   color: transparent;
 }
 
@@ -92,4 +92,12 @@ input[type="date"]::-webkit-datetime-edit-text {
 input[type="date"]::-webkit-clear-button,
 input[type="date"]::-webkit-inner-spin-button {
   display: none;
-} */
+}
+
+input[type="date"]:focus::-webkit-datetime-edit-fields-wrapper {
+  color: initial;
+}
+
+input[type="date"]:focus::-webkit-datetime-edit-text {
+  color: initial;
+}
